# yocto-stm32mp1

./: .gitmodules  README.md  build.sh  clean.sh  flash.sh
STM32CubeProgrammer-2.4.0/: .installationinformation  IzPackLocaleEnabledXdgDesktopIconScript.sh
STM32CubeProgrammer-2.4.0/Data_Base/: STM32_Prog_DB.xml
STM32CubeProgrammer-2.4.0/lib/: libPreparation.so.1  libstp11_SAM.so.conf
azure-sample-application/: CMakeLists.txt  LICENSE  azure_app.c  azure_driver.c  azure_driver.h
layers/meta-st/meta-aesd/: README
layers/meta-st/meta-aesd/conf/: layer.conf
layers/meta-st/meta-aesd/conf/machine/: stm32mp1-aesd.conf
layers/meta-st/meta-aesd/mx/STM32MP157A-DK1/aesd/DeviceTree/aesd/kernel/: stm32mp157a-aesd-mx.dts
layers/meta-st/meta-aesd/mx/STM32MP157A-DK1/aesd/DeviceTree/aesd/tf-a/: stm32mp15-mx.dtsi  stm32mp157a-aesd-mx.dts
layers/meta-st/meta-aesd/mx/STM32MP157A-DK1/aesd/DeviceTree/aesd/u-boot/: stm32mp15-mx.dtsi  stm32mp157a-aesd-mx-u-boot.dtsi  stm32mp157a-aesd-mx.dts
layers/meta-st/meta-aesd/recipes-azure-app/azure-app/: azure-app_git.bb
layers/meta-st/meta-aesd/recipes-azure/azure-iot-sdk-c/: azure-iot-sdk-c.inc
layers/meta-st/meta-aesd/recipes-azure/azure-uhttp-c/: azure-uhttp-c_2020.1.22.bb
layers/meta-st/meta-aesd/recipes-hello-world/hello-world/: hello-world.bb
layers/meta-st/meta-aesd/recipes-st/images/: st-image-aesd.bb
